--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,8 +22,9 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>
 
             <ul class="dropdown-menu" role="menu">
-                <li><a href="#" data-toggle="modal" data-target="#editCompany" onclick="myValidate(frmDetailsArr[1])">New company</a></li>
-                <li><a href="#" data-toggle="modal" data-target="#editUser" onclick="myValidate(frmDetailsArr[0])">New user</a></li>
+                <li th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}"><a href="#" data-toggle="modal" data-target="#editCompany" onclick="myValidate(frmDetailsArr[1])">New company</a></li>
+                <li th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}"><a href="#" data-toggle="modal" data-target="#editUser" onclick="myValidate(frmDetailsArr[0])">New user</a></li>
+                <li th:if="${#authorization.expression('!hasAuthority(''ADMIN'')')}"><a href="#" data-toggle="modal" data-target="#editReport" onclick="myValidate(frmDetailsArr[2])">New report</a></li>
                 <li class="divider"></li>
                 <li><a href="/logout">Log out</a></li>
             </ul>
