--- a/src/main/resources/templates/fragments/modals/report.html
+++ b/src/main/resources/templates/fragments/modals/report.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <body>
-<div class="modal fade" id="editCompany" data-backdrop="static" data-keyboard="false" th:fragment="editCompany">
+<div class="modal fade" id="editReport" data-backdrop="static" data-keyboard="false" th:fragment="editReport">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h2 class="modal-title" id="modalTitle">Add/edit company</h2>
+                <h2 class="modal-title" id="modalTitle">Add/edit report</h2>
             </div>
             <div class="modal-body">
                 <form autocomplete="off" action="#"
-                      class="form-horizontal" role="form" data-toggle="validator" id="detailsFormCmp">
+                      class="form-horizontal" role="form" data-toggle="validator" id="detailsFormRep">
 
                     <input type="hidden" id="id" name="id"/>
 
@@ -19,31 +19,28 @@
 
                         <div class="col-xs-9">
                             <input type="text" placeholder="Name" id="name" name="name"
-                                   class="form-control" data-minlength="3" required/>
+                                   class="form-control" data-minlength="3" required />
                             <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             <div class="help-block">Minimum of 3 characters</div>
                         </div>
                     </div>
 
                     <div class="form-group has-feedback">
-                        <label for="email" class="control-label col-xs-3">Email</label>
+                        <label for="date" class="control-label col-xs-3">Date and time</label>
 
                         <div class="col-xs-9">
-                            <input type="text" placeholder="Email" id="email" name="email"
-                                   class="form-control" th:pattern="${emailpattern}"
-                                   data-error="***Please provide a valid Email" required/>
+                            <input type="text" id="date" name="date"
+                                   class="form-control" required />
                             <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             <div class="help-block with-errors"></div>
                         </div>
                     </div>
 
                     <div class="form-group has-feedback">
-                        <label for="address" class="control-label col-xs-3">Address</label>
+                        <label for="data" class="control-label col-xs-3">Data</label>
 
                         <div class="col-xs-9">
-                            <input type="text" placeholder="Address" id="address"
-                                   name="address"
-                                   class="form-control" data-minlength="5" required/>
+                            <textarea rows="10" cols="45" placeholder="Data" id="data" name="data" class="form-control" data-minlength="5" required ></textarea>
                             <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             <div class="help-block">Minimum of 5 characters</div>
                         </div>
@@ -51,7 +48,7 @@
 
                     <div class="form-group">
                         <div class="col-xs-offset-3 col-xs-9">
-                            <button type="submit" class="btn btn-primary save-company" data-placement="top"
+                            <button type="submit" class="btn btn-primary save-report" data-placement="top"
                                     data-toggle="tooltip" title="Save">
                                 <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                             </button>
@@ -59,7 +56,7 @@
                                     data-toggle="tooltip" data-dismiss="modal" title="Cancel">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </button>
-                            <button type="button" onclick="myValidate(frmDetailsArr[1])" class="btn btn-info pull-right">
+                            <button type="button" onclick="myValidate(frmDetailsArr[2])" class="btn btn-info pull-right">
                                 <span class="glyphicon glyphicon-unchecked" aria-hidden="true"></span>
                             </button>
                         </div>
