--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -5,8 +5,10 @@
 
     <div class="panel-heading">
         <ul class="nav nav-tabs">
-            <li class="active"><a href="#tabcompanies" data-toggle="tab">Companies
-                <span class="glyphicon glyphicon-home"></span></a></li>
+            <th:block th:if="${#authorization.expression('!hasAuthority(''COMPANY_EMPLOYER'')')}">
+                <li class="active"><a href="#tabcompanies" data-toggle="tab">Companies
+                    <span class="glyphicon glyphicon-home"></span></a></li>
+            </th:block>
             <li><a href="#tabusers" data-toggle="tab">Users <span class="glyphicon glyphicon-user"></span></a>
             </li>
             <li><a href="#tabreports" data-toggle="tab">Reports
@@ -15,19 +17,23 @@
     </div>
     <div class="panel-body">
         <div class="tab-content">
-            <div class="tab-pane fade in active" id="tabcompanies">
-                <table class="table table-striped display" id="companyTable">
-                    <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Address</th>
-                        <th></th>
-                        <th></th>
-                    </tr>
-                    </thead>
-                </table>
-            </div>
+            <!--    КОМПАНИИ    -->
+            <th:block th:if="${#authorization.expression('!hasAuthority(''COMPANY_EMPLOYER'')')}">
+                <div class="tab-pane fade in active" id="tabcompanies">
+                    <table class="table table-striped display" id="companyTable">
+                        <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Address</th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                    </table>
+                </div>
+            </th:block>
+            <!--    СОТРУДНИКИ    -->
             <div class="tab-pane fade" id="tabusers">
                 <table class="table table-striped display" id="userTable">
                     <thead>
@@ -44,6 +50,8 @@
                     </thead>
                 </table>
             </div>
+
+            <!--    ОТЧЕТЫ    -->
             <div class="tab-pane fade" id="tabreports">
                 <table class="table table-striped display" id="reportTable">
                     <thead>
