--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -5,36 +5,21 @@
 
     <div class="panel-heading">
         <ul class="nav nav-tabs">
-            <th:block th:if="${#authorization.expression('!hasAuthority(''COMPANY_EMPLOYER'')')}">
-                <li class="active"><a href="#tabcompanies" data-toggle="tab">Companies
+            <li class="active"><a href="#tabusers" data-toggle="tab">Users <span
+                    class="glyphicon glyphicon-user"></span></a></li>
+
+            <li th:if="${#authorization.expression('!hasAuthority(''COMPANY_EMPLOYER'')')}">
+                <a href="#tabcompanies" data-toggle="tab">Companies
                     <span class="glyphicon glyphicon-home"></span></a></li>
-            </th:block>
-            <li><a href="#tabusers" data-toggle="tab">Users <span class="glyphicon glyphicon-user"></span></a>
-            </li>
+
             <li><a href="#tabreports" data-toggle="tab">Reports
                 <span class="glyphicon glyphicon-list-alt"></span></a></li>
         </ul>
     </div>
     <div class="panel-body">
         <div class="tab-content">
-            <!--    КОМПАНИИ    -->
-            <th:block th:if="${#authorization.expression('!hasAuthority(''COMPANY_EMPLOYER'')')}">
-                <div class="tab-pane fade in active" id="tabcompanies">
-                    <table class="table table-striped display" id="companyTable">
-                        <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Email</th>
-                            <th>Address</th>
-                            <th></th>
-                            <th></th>
-                        </tr>
-                        </thead>
-                    </table>
-                </div>
-            </th:block>
             <!--    СОТРУДНИКИ    -->
-            <div class="tab-pane fade" id="tabusers">
+            <div class="tab-pane fade in active" id="tabusers">
                 <table class="table table-striped display" id="userTable">
                     <thead>
                     <tr>
@@ -44,6 +29,22 @@
                         <th>Phone</th>
                         <th>Company</th>
                         <th>Roles</th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                </table>
+            </div>
+
+            <!--    КОМПАНИИ    -->
+            <div class="tab-pane fade" id="tabcompanies"
+                 th:if="${#authorization.expression('!hasAuthority(''COMPANY_EMPLOYER'')')}">
+                <table class="table table-striped display" id="companyTable">
+                    <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Address</th>
                         <th></th>
                         <th></th>
                     </tr>
@@ -78,14 +79,18 @@
 
     <!--   modal forms  -->
     <th:block th:replace="~{fragments/modals/user :: editUser}"></th:block>
-    <th:block th:replace="~{fragments/modals/company :: editCompany}"></th:block>
+    <th:block th:if="${#authorization.expression('!hasAuthority(''COMPANY_EMPLOYER'')')}">
+        <th:block th:replace="~{fragments/modals/company :: editCompany}"></th:block>
+    </th:block>
     <th:block th:replace="~{fragments/modals/report :: editReport}"></th:block>
     <!-- --------------------------------------------------------------------------------------- -->
     <!-- ---------------------------        ACTIONS WITH CONFIRM         ----------------------- -->
     <!-- --------------------------------------------------------------------------------------- -->
     <script type="application/javascript" src="/js/datatableUtils.js" defer></script>
     <script type="application/javascript" src="/js/userDatatables.js" defer></script>
-    <script type="application/javascript" src="/js/companyDatatables.js" defer></script>
+    <th:block th:if="${#authorization.expression('!hasAuthority(''COMPANY_EMPLOYER'')')}">
+        <script type="application/javascript" src="/js/companyDatatables.js" defer></script>
+    </th:block>
     <script type="application/javascript" src="/js/reportDatatables.js" defer></script>
 
 </div>
