--- a/src/main/resources/templates/fragments/modals/user.html
+++ b/src/main/resources/templates/fragments/modals/user.html
@@ -83,7 +83,7 @@
                         </div>
                     </div>
 
-                    <div class="form-group blu-margin has-feedback">
+                    <div class="form-group blu-margin has-feedback" th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
                         <div class="col-xs-offset-3 col-xs-9">
                             <select class="form-control" id="dropOperator" name = "company" required>
                                 <!--<option value="" selected="selected">Select company:</option>-->
