--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,24 +7,42 @@
 <div class="panel panel-info" th:fragment="header">
     <div class="panel-heading clearfix">
         <h4 class="panel-title pull-left" style="padding-top: 7.5px">
-            <span th:utext="${userName}"></span>
+            <th:block>
+                <p>
+                    Welcome <span th:text="${#authentication.getPrincipal().getUserTo().getName()}">username</span>
+                    <span th:text="${#authentication.getPrincipal().getUserTo().getLastname()}">username</span>
+                    (<span th:text="${#authentication.getPrincipal().getUserTo().getEmail()}">username</span>)
+                </p>
+            </th:block>
         </h4>
 
-<!--    на будущее
-        <span th:text="#{lang.change}"></span>:
-        <select id="locales">
-            <option value=""></option>
-            <option value="en" th:text="#{lang.eng}"></option>
-            <option value="fr" th:text="#{lang.fr}"></option>
-        </select>-->
+        <!--    на будущее
+                <span th:text="#{lang.change}"></span>:
+                <select id="locales">
+                    <option value=""></option>
+                    <option value="en" th:text="#{lang.eng}"></option>
+                    <option value="fr" th:text="#{lang.fr}"></option>
+                </select>-->
 
         <div class="dropdown pull-right" style="padding-top: 7.5px">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>
 
             <ul class="dropdown-menu" role="menu">
-                <li th:if="${#authorization.expression('!hasAuthority(''COMPANY_EMPLOYER'')')}"><a href="#" data-toggle="modal" data-target="#editUser" onclick="myValidate(frmDetailsArr[0])">New user</a></li>
-                <li th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}"><a href="#" data-toggle="modal" data-target="#editCompany" onclick="myValidate(frmDetailsArr[1])">New company</a></li>
-                <li th:if="${#authorization.expression('!hasAuthority(''ADMIN'')')}"><a href="#" data-toggle="modal" data-target="#editReport" onclick="myValidate(frmDetailsArr[2])">New report</a></li>
+                <li th:if="${#authorization.expression('!hasAuthority(''COMPANY_EMPLOYER'')')}">
+                    <a href="#" data-toggle="modal" data-target="#editUser" onclick="myValidate(frmDetailsArr[0])">
+                        New user
+                    </a>
+                </li>
+                <li th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
+                    <a href="#" data-toggle="modal" data-target="#editCompany" onclick="myValidate(frmDetailsArr[1])">
+                        New company
+                    </a>
+                </li>
+                <li th:if="${#authorization.expression('!hasAuthority(''ADMIN'')')}">
+                    <a href="#" data-toggle="modal" data-target="#editReport" onclick="myValidate(frmDetailsArr[2])">
+                        New report
+                    </a>
+                </li>
                 <li class="divider"></li>
                 <li><a href="/logout">Log out</a></li>
             </ul>
