--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -11,13 +11,17 @@
         </div>
     </div>
 
-<!--    <script type="text/javascript">
-        var i18n = [];
+    <script th:inline="javascript">
+        /*<![CDATA[*/
 
-        <c:forEach var='key' items='<%=new String[]{"common.deleted","common.saved","common.enabled","common.disabled","common.status", "users.edit", "meals.edit", "common.search"}%>'>
+        var localeCode = [[${#locale.language}]];
+
+        /*]]>*/
+// TODO разобраться, массивы в зимлифф глянуть
+/*        <c:forEach var='key' items='<%=new String[]{"common.deleted","common.saved","common.enabled","common.disabled","common.status", "users.edit", "meals.edit", "common.search"}%>'>
         i18n['${key}'] = '<spring:message code="${key}"/>';
-        </c:forEach>
-    </script>-->
+        </c:forEach>*/
+    </script>
 </div>
 </body>
 
