--- a/src/main/resources/templates/fragments/lang.html
+++ b/src/main/resources/templates/fragments/lang.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:float="http://www.w3.org/1999/xhtml"
-      xmlns:width="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <div class="dropdown pull-right" style="padding-top: 7.5px; padding-left: 10px" th:fragment="lang">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span th:text="${#locale.language}"/><b
-            class="caret"></b></a>
-    <ul class="dropdown-menu">
-        <li><a onclick="show('en')">En</a></li>
-        <li><a onclick="show('ru')">Ru</a></li>
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span th:text="${#locale.language}"/><span
+            class="caret"/></a>
+    <ul class="dropdown-menu" style="min-width: 0px; !important;">
+        <li><a href="#" onclick="show('en')">En</a></li>
+        <li><a href="#" onclick="show('ru')">Ru</a></li>
     </ul>
     <script th:inline="javascript">
         /*<![CDATA[*/
