--- a/src/main/resources/templates/fragments/lang.html
+++ b/src/main/resources/templates/fragments/lang.html
@@ -4,8 +4,8 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span th:text="${#locale.language}"/><span
             class="caret"/></a>
     <ul class="dropdown-menu" style="min-width: 0px; !important;">
-        <li><a href="#" onclick="show('en')">En</a></li>
-        <li><a href="#" onclick="show('ru')">Ru</a></li>
+        <li><a href="#" onclick="show('en')">English</a></li>
+        <li><a href="#" onclick="show('ru')">Русский</a></li>
     </ul>
     <script th:inline="javascript">
         /*<![CDATA[*/
