--- a/src/main/resources/templates/fragments/modals/company.html
+++ b/src/main/resources/templates/fragments/modals/company.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <body>
 <div class="modal fade" id="editCompany" data-backdrop="static" data-keyboard="false" th:fragment="editCompany">
     <div class="modal-dialog">
