--- a/src/main/resources/templates/fragments/modals/user.html
+++ b/src/main/resources/templates/fragments/modals/user.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml" lang="ru" xml:lang="ru">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <body>
 <div class="modal fade" id="editUser" data-backdrop="static" data-keyboard="false" th:fragment="editUser">
     <div class="modal-dialog">
